# CIMC-TEAM

./: README.md
sim_ws/devel/: .catkin  .rosinstall
sim_ws/devel/lib/pkgconfig/: a1_description.pc  aliengoZ1_description.pc  aliengo_description.pc  b1_description.pc  b2_description.pc  b2w_description.pc  go1_description.pc  go2_description.pc  go2w_description.pc  h1_description.pc  laikago_description.pc  unitree_controller.pc  unitree_gazebo.pc  unitree_legged_control.pc  unitree_legged_msgs.pc  z1_description.pc
sim_ws/devel/lib/unitree_controller/: unitree_external_force  unitree_servo
sim_ws/devel/share/a1_description/cmake/: a1_descriptionConfig.cmake
sim_ws/devel/share/aliengoZ1_description/cmake/: aliengoZ1_descriptionConfig.cmake
unitree_ros/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
unitree_ros/devel/lib/pkgconfig/: z1_sdk.pc
unitree_ros/devel/lib/z1_sdk/: Velocity_planning  main_node
unitree_ros/src/force_sensor/: CMakeLists.txt  package.xml
unitree_ros/src/force_sensor/src/: read_test.py
unitree_ros/src/z1_sdk/: CMakeLists.txt  package.xml
unitree_ros/src/z1_sdk/include/unitree_arm_sdk/control/: Velocity_planning.h  unitreeArm.h
unitree_ros/src/z1_sdk/include/unitree_arm_sdk/ik_solver/: ik_solver.h  z1.urdf
unitree_ros/src/z1_sdk/src/: Velocity_planning.cpp  ik_solver.cpp  main_node.cpp
z1_sdk/: CMakeLists.txt
z1_sdk/LIB/: ik_solver.cpp
z1_sdk/examples/: .highcmd_basic.cpp.swp  Velocity_planning.cpp
z1_sdk/include/unitree_arm_sdk/ik_solver/: ik_solver.h
z1_sdk/include/unitree_arm_sdk/math/: mathTypes.h
(+18 files in other folders)
